// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip.vue matches snapshot 1`] = `
<floating-ui-stub
  arrowclass="absolute w-2 h-2 rotate-45 bg-dark"
  arrowpadding="5"
  data-id="sds-tooltip"
  disableanimation="true"
  offset="10"
  overflowpadding="5"
  placement="top"
  placementbottomarrowclass="-top-1"
  placementleftarrowclass="-right-1"
  placementrightarrowclass="-left-1"
  placementtoparrowclass="-bottom-1"
  popperclass="absolute text-xs shadow rounded-lg text-center bg-dark text-light w-32 z-50"
  shift="true"
  strategy="absolute"
>
  <div />
  <div
    class="p-2"
  />
</floating-ui-stub>
`;

exports[`Tooltip.vue matches snapshot with no props assigned 1`] = `
"<floating-ui-stub placement=\\"top\\" strategy=\\"absolute\\" overflowpadding=\\"5\\" arrowpadding=\\"5\\" offset=\\"10\\" shift=\\"true\\" disableanimation=\\"true\\" popperclass=\\"absolute text-xs shadow rounded-lg text-center bg-dark text-light w-32 z-50\\" arrowclass=\\"absolute w-2 h-2 rotate-45 bg-dark\\" placementtoparrowclass=\\"-bottom-1\\" placementrightarrowclass=\\"-left-1\\" placementbottomarrowclass=\\"-top-1\\" placementleftarrowclass=\\"-right-1\\" data-id=\\"sds-tooltip\\">
  <div></div>
  <div class=\\"p-2\\"></div>
</floating-ui-stub>"
`;

exports[`Tooltip.vue matches snapshot with prop assigned 1`] = `
"<floating-ui-stub placement=\\"bottom\\" strategy=\\"absolute\\" overflowpadding=\\"5\\" arrowpadding=\\"5\\" offset=\\"10\\" shift=\\"true\\" disableanimation=\\"true\\" popperclass=\\"absolute text-xs shadow rounded-lg text-center bg-dark text-light w-32 z-50\\" arrowclass=\\"absolute w-2 h-2 rotate-45 bg-dark\\" placementtoparrowclass=\\"-bottom-1\\" placementrightarrowclass=\\"-left-1\\" placementbottomarrowclass=\\"-top-1\\" placementleftarrowclass=\\"-right-1\\" data-id=\\"sds-tooltip\\" tooltipclass=\\"test\\" triggerclass=\\"test\\">
  <div></div>
  <div class=\\"p-2\\"></div>
</floating-ui-stub>"
`;
